--- a/public/dark-mode.css
+++ b/public/dark-mode.css
@@ -1,36 +1,73 @@
   [data-theme="dark"] {
-    background-color: #111 !important;
-    color: #eee;
+      background-color: #111 !important;
+      color: #eee;
   }
-  
+
+  [data-theme="dark"] h2.text-secondary {
+      color: #007bff !important;
+  }
+
+  [data-theme="dark"] hr {
+      border-color: #ffffff11 !important;
+  }
+
+  [data-theme="dark"] .card.schedule {
+      background-color: #191C1E !important;
+      border-color: #ffffff28 !important;
+  }
+
+  [data-theme="dark"] .card.card-overview {
+      background-color: black;
+  }
+
+  [data-theme="dark"] .card.card-overview:hover {
+      box-shadow: none;
+  }
+
   [data-theme="dark"] .bg-light {
-    background-color: #333 !important;
+      background-color: #191C1E !important;
   }
-  
+
   [data-theme="dark"] .bg-white {
-    background-color: #000 !important;
+      background-color: #000 !important;
   }
-  
+
   [data-theme="dark"] .bg-black {
-    background-color: #eee !important;
+      background-color: #eee !important;
+  }
+
+  [data-theme="dark"] .headline-event-tight {
+      color: #fff !important;
+  }
+
+  [data-theme="dark"] .text-logo.text-dark {
+      color: #fff !important;
   }
 
   [data-theme="dark"] .navbar-brand {
-    color: #fff !important;
+      color: #fff !important;
   }
 
   [data-theme="dark"] .navbar-toggler-icon {
-    color: #fff !important;
+      color: #fff !important;
   }
 
   [data-theme="dark"] .nav-item.nav-link.active {
-    color: #fff !important;
+      color: #fff !important;
   }
 
-  [data-theme="dark"] .nav-item.nav-link {
-    color: rgb(90, 90, 90) !important;
+  [data-theme="dark"] .nav-tabs {
+      border-bottom: none;
+  }
+
+  [data-theme="dark"] .nav-tabs .nav-link.active {
+      color: #fff !important;
+  }
+
+  [data-theme="dark"] .nav-tabs .nav-link:hover {
+      border: transparent;
   }
 
   [data-theme="dark"] .navbar-light .navbar-toggler {
-    color: #fff !important;
+      color: #fff !important;
   }
