--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,16 @@ iframe {
     border-radius: 40px;
 }
 
+.remove-marginbottom {
+    background-color: #181818;
+    text-align: center;
+    margin-bottom: 0 !important;
+}
+
+.force-white {
+    color: white !important;
+}
+
 .jumbotron.home-overview {
     width: 100%;
     height: 70vh;
